final: projeto full stack gabaritado com criptografia BCrypt local e conformidade total